<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="right"
        android:text="@string/calculator_button_0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/number_1"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_1" />

            <Button
                android:id="@+id/number_2"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_2" />

            <Button
                android:id="@+id/number_3"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_3" />

            <Button
                android:id="@+id/plus"
                style="@style/CalculatorButton"
                android:text="@string/calculator_button_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/number_4"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_4" />

            <Button
                android:id="@+id/number_5"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_5" />

            <Button
                android:id="@+id/number_6"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_6" />

            <Button
                android:id="@+id/minus"
                style="@style/CalculatorButton"
                android:text="@string/calculator_button_minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/number_7"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_7" />

            <Button
                android:id="@+id/number_8"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_8" />

            <Button
                android:id="@+id/number_9"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_9" />

            <Button
                android:id="@+id/multiply"
                style="@style/CalculatorButton"
                android:text="@string/calculator_button_mult" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                style="@style/CalculatorButton"
                android:text="@string/calculator_button_clear" />

            <Button
                android:id="@+id/number_0"
                style="@style/CalculatorButton"
                android:onClick="onNumberPressed"
                android:text="@string/calculator_button_0" />

            <Button
                android:id="@+id/enter"
                style="@style/CalculatorButton"
                android:text="@string/calculator_button_enter" />

            <Button
                android:id="@+id/divide"
                style="@style/CalculatorButton"
                android:text="@string/calculator_button_div" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
